tests/type_errors/var.pylambda
x = 5 + 3;
print x or true;